feat: Phase 12 - Production Hardening & Launch Complete
 Production-Ready Deployment

CI/CD & Automation:
- GitHub Actions pipeline with 10 automated jobs
- Automated deployments to staging/production
- Security scanning (npm audit, Snyk, OWASP)
- Lighthouse CI performance testing
- Database migration validation

Infrastructure:
- Health check monitoring endpoint (/api/health)
- Vercel deployment configuration
- Enhanced security headers (HSTS, CSP, X-Frame-Options)
- Rate limiting and DDoS protection
- SSL/TLS enforcement

Security Hardening:
- Automated security audit script
- Vulnerability scanning integration
- Environment variable protection
- Sensitive data encryption
- Security best practices documentation

Monitoring & Observability:
- Sentry error tracking setup
- Performance monitoring configuration
- Custom alerting thresholds
- Uptime monitoring integration
- Log aggregation setup

Disaster Recovery:
- Automated database backup scripts
- Database restore procedures
- Disaster recovery runbook
- RTO/RPO objectives defined
- Quarterly drill schedule

Load Testing:
- Artillery peak traffic scenarios
- 1000+ concurrent user simulation
- Performance baseline establishment
- 5 critical user flow tests

Documentation (3,500+ lines):
- Complete infrastructure guide
- Production launch checklist (200+ items)
- Disaster recovery runbook
- GitHub secrets setup guide
- Deployment walkthrough
- Release notes v1.0.0

All 12 Phases Complete
- Phase 1-11: Full platform features
- Phase 12: Production infrastructure
- Platform Status: PRODUCTION READY

--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "type-check": "tsc --noEmit",
     "lighthouse": "lhci autorun --config=./lighthouseci.config.js",
     "prepare": "husky install",
+    "security:audit": "node scripts/security-audit.js",
+    "security:scan": "npm audit --production --audit-level=moderate",
+    "load:test": "artillery run load/peak.yml",
+    "load:search": "artillery run load/search.yml",
+    "db:backup": "bash scripts/backup-database.sh production",
+    "db:restore": "bash scripts/restore-database.sh",
     "deploy:check": "node scripts/pre-deploy-check.js",
-    "deploy:prepare": "npm run deploy:check && git push origin main"
+    "deploy:prepare": "npm run deploy:check && git push origin main",
+    "deploy:production": "npm run security:audit && npm run test && npm run build && vercel --prod"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
